bing image search api

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -42,6 +42,14 @@ $bg-color  : #ffffff;
 	transform         : translate3d( $x, $y, $z );
 }
 
+@mixin transformGeneral( $type ) {
+	-webkit-transform : $type;
+	-moz-transform    : $type;
+	-ms-transform     : $type;
+	-o-transform      : $type;
+	transform         : $type;
+}
+
 @mixin animationFunc( $ani, $s, $event ) {
 	-webkit-animation: $ani $s $event;
 	-moz-animation   : $ani $s $event;
@@ -412,9 +420,9 @@ body {
 	right: 0;
 	bottom: 0;
 	margin-top: -44px;
-	color: #524231;
+	color: $btn-text;
 	opacity: 0;
-	transform: scale( .5, .5 );
+	@include transformGeneral(scale( .5, .5 ));
 }
 
 .svg-check {
@@ -715,6 +723,25 @@ footer {
     }
 }
 
+@-webkit-keyframes numberZoomAni {
+   0% {
+   		opacity: 0;
+		-webkit-transform: scale( .5, .5 );
+    }
+    50% {
+    	opacity: .5;
+		-webkit-transform: scale( .75, .75 );
+    }
+    99% {
+    	opacity: 0;
+		-webkit-transform: scale( 1, 1 );
+    }
+    100% {
+    	opacity: 0;
+		-webkit-transform: scale( .5, .5 );
+    }
+}
+
 @keyframes numberZoomAni {
    0% {
    		opacity: 0;
@@ -731,5 +758,43 @@ footer {
     100% {
     	opacity: 0;
 		transform: scale( .5, .5 );
+    }
+}
+
+@-moz-keyframes numberZoomAni {
+   0% {
+   		opacity: 0;
+		-moz-transform: scale( .5, .5 );
+    }
+    50% {
+    	opacity: .5;
+		-moz-transform: scale( .75, .75 );
+    }
+    99% {
+    	opacity: 0;
+		-moz-transform: scale( 1, 1 );
+    }
+    100% {
+    	opacity: 0;
+		-moz-transform: scale( .5, .5 );
+    }
+}
+
+@-o-keyframes numberZoomAni {
+   0% {
+   		opacity: 0;
+		-o-transform: scale( .5, .5 );
+    }
+    50% {
+    	opacity: .5;
+		-o-transform: scale( .75, .75 );
+    }
+    99% {
+    	opacity: 0;
+		-o-transform: scale( 1, 1 );
+    }
+    100% {
+    	opacity: 0;
+		-o-transform: scale( .5, .5 );
     }
 }
