--- a/resources/assets/stylesheets/app.css
+++ b/resources/assets/stylesheets/app.css
@@ -8772,24 +8772,24 @@ button.close {
 /* VARIABLES */
 /* MIXINS */
 /* GENERAL SITE STYLING */
-/* line 59, ../sass/app.scss */
+/* line 67, ../sass/app.scss */
 html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-shadow: 0 0 1px rgba(128, 128, 128, 0.01);
 }
 
-/* line 65, ../sass/app.scss */
+/* line 73, ../sass/app.scss */
 *::selection {
   background-color: transparent;
 }
 
-/* line 69, ../sass/app.scss */
+/* line 77, ../sass/app.scss */
 *::-moz-selection {
   background-color: transparent;
 }
 
-/* line 73, ../sass/app.scss */
+/* line 81, ../sass/app.scss */
 * {
   -webkit-user-select: none;
   -moz-user-select: -moz-none;
@@ -8798,7 +8798,7 @@ html {
   -webkit-tap-highlight-color: transparent;
 }
 
-/* line 81, ../sass/app.scss */
+/* line 89, ../sass/app.scss */
 input[type="text"], textarea, [contenteditable] {
   -webkit-user-select: text;
   -moz-user-select: text;
@@ -8806,21 +8806,21 @@ input[type="text"], textarea, [contenteditable] {
   user-select: text;
 }
 
-/* line 88, ../sass/app.scss */
+/* line 96, ../sass/app.scss */
 body {
   font-family: 'Archivo Narrow', serif;
   background-color: #ffffff;
 }
 
 /* ID SPECIFIC */
-/* line 99, ../sass/app.scss */
+/* line 107, ../sass/app.scss */
 #find-all {
   background: url(../../../public/images/allparks.jpg) no-repeat left center;
   background-size: 100%;
   background-position: center;
 }
 @media (min-width: 768px) {
-  /* line 99, ../sass/app.scss */
+  /* line 107, ../sass/app.scss */
   #find-all {
     width: 640px;
     background-position-y: -200px;
@@ -8828,7 +8828,7 @@ body {
   }
 }
 
-/* line 110, ../sass/app.scss */
+/* line 118, ../sass/app.scss */
 #find-parks-page {
   display: none;
   height: 100vh;
@@ -8843,7 +8843,7 @@ body {
 }
 
 /* GENERAL CLASSES */
-/* line 128, ../sass/app.scss */
+/* line 136, ../sass/app.scss */
 .title {
   letter-spacing: 10px;
   -webkit-transition: all 0.1s ease-in-out;
@@ -8853,7 +8853,7 @@ body {
   transition: all 0.1s ease-in-out;
 }
 
-/* line 133, ../sass/app.scss */
+/* line 141, ../sass/app.scss */
 .sub-title {
   letter-spacing: 3px;
   -webkit-transition: all 0.1s ease-in-out;
@@ -8863,7 +8863,7 @@ body {
   transition: all 0.1s ease-in-out;
 }
 
-/* line 138, ../sass/app.scss */
+/* line 146, ../sass/app.scss */
 .description {
   font-size: 16px;
   padding: 0 10px;
@@ -8874,7 +8874,7 @@ body {
   transition: all 0.1s ease-in-out;
 }
 
-/* line 144, ../sass/app.scss */
+/* line 152, ../sass/app.scss */
 .reset-btn {
   position: fixed;
   bottom: 2%;
@@ -8893,22 +8893,22 @@ body {
   cursor: pointer;
   font-weight: bold;
 }
-/* line 162, ../sass/app.scss */
+/* line 170, ../sass/app.scss */
 .reset-btn:active {
   opacity: .8;
 }
-/* line 166, ../sass/app.scss */
+/* line 174, ../sass/app.scss */
 .reset-btn i {
   line-height: 28px;
 }
 
-/* line 181, ../sass/app.scss */
+/* line 189, ../sass/app.scss */
 .gmap {
   width: 100%;
   height: 40%;
 }
 
-/* line 186, ../sass/app.scss */
+/* line 194, ../sass/app.scss */
 .fire-btn {
   position: fixed;
   bottom: 2%;
@@ -8927,12 +8927,12 @@ body {
   cursor: pointer;
   font-weight: bold;
 }
-/* line 204, ../sass/app.scss */
+/* line 212, ../sass/app.scss */
 .fire-btn:active {
   opacity: .8;
 }
 
-/* line 215, ../sass/app.scss */
+/* line 223, ../sass/app.scss */
 .fire-btn-shadow {
   position: fixed;
   bottom: 2%;
@@ -8948,7 +8948,7 @@ body {
   box-shadow: 0px 8px 36px -9px black;
 }
 
-/* line 236, ../sass/app.scss */
+/* line 244, ../sass/app.scss */
 .reset-btn-shadow {
   position: fixed;
   bottom: 2%;
@@ -8965,31 +8965,31 @@ body {
   box-shadow: 0px 8px 36px -9px black;
 }
 
-/* line 258, ../sass/app.scss */
+/* line 266, ../sass/app.scss */
 .center {
   margin: 0 auto;
 }
 
-/* line 262, ../sass/app.scss */
+/* line 270, ../sass/app.scss */
 .text-center {
   text-align: center;
 }
 
-/* line 267, ../sass/app.scss */
+/* line 275, ../sass/app.scss */
 .park-nav ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 @media (min-width: 768px) {
-  /* line 267, ../sass/app.scss */
+  /* line 275, ../sass/app.scss */
   .park-nav ul {
     width: 640px;
     margin: 0 auto;
     text-align: center;
   }
 }
-/* line 279, ../sass/app.scss */
+/* line 287, ../sass/app.scss */
 .park-nav ul li {
   position: relative;
   height: 150px;
@@ -8997,7 +8997,7 @@ body {
   margin: 5px 0 5px 0;
 }
 @media (min-width: 768px) {
-  /* line 279, ../sass/app.scss */
+  /* line 287, ../sass/app.scss */
   .park-nav ul li {
     width: 318px;
     /*account for padding*/
@@ -9006,7 +9006,7 @@ body {
     display: inline-block;
   }
 }
-/* line 293, ../sass/app.scss */
+/* line 301, ../sass/app.scss */
 .park-nav ul li p {
   position: absolute;
   bottom: 0;
@@ -9032,7 +9032,7 @@ body {
   -o-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
 }
-/* line 315, ../sass/app.scss */
+/* line 323, ../sass/app.scss */
 .park-nav ul li:hover p {
   -webkit-transform: translate(-5px, 0px);
   -moz-transform: translate(-5px, 0px);
@@ -9041,7 +9041,7 @@ body {
   transform: translate(-5px, 0px);
 }
 
-/* line 323, ../sass/app.scss */
+/* line 331, ../sass/app.scss */
 .li-bg {
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
@@ -9050,20 +9050,20 @@ body {
   transition: all 0.2s ease-in-out;
   opacity: .9;
 }
-/* line 326, ../sass/app.scss */
+/* line 334, ../sass/app.scss */
 .li-bg:hover {
   cursor: pointer;
 }
-/* line 329, ../sass/app.scss */
+/* line 337, ../sass/app.scss */
 .li-bg:hover .li-overlay {
   background-color: #fff;
 }
-/* line 333, ../sass/app.scss */
+/* line 341, ../sass/app.scss */
 .li-bg:active {
   opacity: 1;
 }
 
-/* line 338, ../sass/app.scss */
+/* line 346, ../sass/app.scss */
 .li-overlay {
   position: absolute;
   top: 72.5%;
@@ -9079,7 +9079,7 @@ body {
   transition: all 0.5s ease-in-out;
 }
 
-/* line 349, ../sass/app.scss */
+/* line 357, ../sass/app.scss */
 .li-overlay-white {
   position: absolute;
   top: 69%;
@@ -9089,14 +9089,14 @@ body {
   background-color: #fff;
 }
 
-/* line 358, ../sass/app.scss */
+/* line 366, ../sass/app.scss */
 .park-distance-ul {
   overflow: hidden;
   width: 100%;
   height: 76px;
 }
 
-/* line 364, ../sass/app.scss */
+/* line 372, ../sass/app.scss */
 .park-distance-ul ul {
   margin: 0;
   padding: 0;
@@ -9105,7 +9105,7 @@ body {
   padding-bottom: 17px;
 }
 
-/* line 372, ../sass/app.scss */
+/* line 380, ../sass/app.scss */
 .park-distance-ul ul li {
   list-style: none;
   position: relative;
@@ -9125,7 +9125,7 @@ body {
   transition: all 1s ease-in-out;
 }
 
-/* line 387, ../sass/app.scss */
+/* line 395, ../sass/app.scss */
 .park-distance-ul ul li:hover {
   opacity: .7;
   -webkit-transition: all 0.1s ease-in-out;
@@ -9135,12 +9135,12 @@ body {
   transition: all 0.1s ease-in-out;
 }
 
-/* line 392, ../sass/app.scss */
+/* line 400, ../sass/app.scss */
 .park-selected {
   opacity: .5;
 }
 
-/* line 396, ../sass/app.scss */
+/* line 404, ../sass/app.scss */
 .park-distance-ul ul li .number {
   font-size: 20px;
   display: inline-block;
@@ -9151,7 +9151,7 @@ body {
   color: #524231;
 }
 
-/* line 406, ../sass/app.scss */
+/* line 414, ../sass/app.scss */
 .number-overlay {
   font-size: 62px;
   display: inline-block;
@@ -9163,10 +9163,14 @@ body {
   margin-top: -44px;
   color: #524231;
   opacity: 0;
+  -webkit-transform: scale(0.5, 0.5);
+  -moz-transform: scale(0.5, 0.5);
+  -ms-transform: scale(0.5, 0.5);
+  -o-transform: scale(0.5, 0.5);
   transform: scale(0.5, 0.5);
 }
 
-/* line 420, ../sass/app.scss */
+/* line 428, ../sass/app.scss */
 .svg-check {
   display: none;
   position: absolute;
@@ -9178,7 +9182,7 @@ body {
   height: 40px;
 }
 
-/* line 431, ../sass/app.scss */
+/* line 439, ../sass/app.scss */
 footer {
   color: #aec1ae;
   font-size: 10px;
@@ -9186,18 +9190,18 @@ footer {
 }
 
 @media all and (min-width: 768px) {
-  /* line 438, ../sass/app.scss */
+  /* line 446, ../sass/app.scss */
   .park-distance-ul {
     height: auto;
   }
 
-  /* line 442, ../sass/app.scss */
+  /* line 450, ../sass/app.scss */
   .park-distance-ul ul {
     padding-bottom: 0;
   }
 }
 /* TRANSITION SPECIFIC */
-/* line 453, ../sass/app.scss */
+/* line 461, ../sass/app.scss */
 .ani-left {
   -webkit-transform: translate3d(-2000px, 0, 0);
   -moz-transform: translate3d(-2000px, 0, 0);
@@ -9207,7 +9211,7 @@ footer {
   opacity: 0;
 }
 
-/* line 458, ../sass/app.scss */
+/* line 466, ../sass/app.scss */
 .ani-right {
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
@@ -9217,18 +9221,18 @@ footer {
   opacity: 1;
 }
 
-/* line 463, ../sass/app.scss */
+/* line 471, ../sass/app.scss */
 .ani-fadeOut {
   opacity: 0;
 }
 
-/* line 467, ../sass/app.scss */
+/* line 475, ../sass/app.scss */
 .ani-fadeIn {
   opacity: 1;
 }
 
 /* ANIMATION SPECIFIC */
-/* line 477, ../sass/app.scss */
+/* line 485, ../sass/app.scss */
 .zoom-check {
   -webkit-animation: zoomAni 0.5s forwards;
   -moz-animation: zoomAni 0.5s forwards;
@@ -9237,7 +9241,7 @@ footer {
   animation: zoomAni 0.5s forwards;
 }
 
-/* line 481, ../sass/app.scss */
+/* line 489, ../sass/app.scss */
 .zoom-check-reverse {
   -webkit-animation: zoomAniRev 0.5s forwards;
   -moz-animation: zoomAniRev 0.5s forwards;
@@ -9246,7 +9250,7 @@ footer {
   animation: zoomAniRev 0.5s forwards;
 }
 
-/* line 485, ../sass/app.scss */
+/* line 493, ../sass/app.scss */
 .zoom-check-shadow {
   -webkit-animation: zoomAniRevShadow 0.5s forwards;
   -moz-animation: zoomAniRevShadow 0.5s forwards;
@@ -9255,7 +9259,7 @@ footer {
   animation: zoomAniRevShadow 0.5s forwards;
 }
 
-/* line 489, ../sass/app.scss */
+/* line 497, ../sass/app.scss */
 .zoom-check-shadow-reverse {
   -webkit-animation: zoomAniRevShadowRev 0.5s forwards;
   -moz-animation: zoomAniRevShadowRev 0.5s forwards;
@@ -9264,7 +9268,7 @@ footer {
   animation: zoomAniRevShadowRev 0.5s forwards;
 }
 
-/* line 493, ../sass/app.scss */
+/* line 501, ../sass/app.scss */
 .slide-center {
   -webkit-animation: slideAni 0.5s forwards;
   -moz-animation: slideAni 0.5s forwards;
@@ -9273,7 +9277,7 @@ footer {
   animation: slideAni 0.5s forwards;
 }
 
-/* line 497, ../sass/app.scss */
+/* line 505, ../sass/app.scss */
 .number-zoom {
   -webkit-animation: numberZoomAni 1.5s forwards;
   -moz-animation: numberZoomAni 1.5s forwards;
@@ -9474,6 +9478,24 @@ footer {
     transform: translate(-5px, 0px);
   }
 }
+@-webkit-keyframes numberZoomAni {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale(0.5, 0.5);
+  }
+  50% {
+    opacity: .5;
+    -webkit-transform: scale(0.75, 0.75);
+  }
+  99% {
+    opacity: 0;
+    -webkit-transform: scale(1, 1);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: scale(0.5, 0.5);
+  }
+}
 @keyframes numberZoomAni {
   0% {
     opacity: 0;
@@ -9490,5 +9512,41 @@ footer {
   100% {
     opacity: 0;
     transform: scale(0.5, 0.5);
+  }
+}
+@-moz-keyframes numberZoomAni {
+  0% {
+    opacity: 0;
+    -moz-transform: scale(0.5, 0.5);
+  }
+  50% {
+    opacity: .5;
+    -moz-transform: scale(0.75, 0.75);
+  }
+  99% {
+    opacity: 0;
+    -moz-transform: scale(1, 1);
+  }
+  100% {
+    opacity: 0;
+    -moz-transform: scale(0.5, 0.5);
+  }
+}
+@-o-keyframes numberZoomAni {
+  0% {
+    opacity: 0;
+    -o-transform: scale(0.5, 0.5);
+  }
+  50% {
+    opacity: .5;
+    -o-transform: scale(0.75, 0.75);
+  }
+  99% {
+    opacity: 0;
+    -o-transform: scale(1, 1);
+  }
+  100% {
+    opacity: 0;
+    -o-transform: scale(0.5, 0.5);
   }
 }
