--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -425,6 +425,40 @@ body {
 	@include transformGeneral(scale( .5, .5 ));
 }
 
+.park-info-cont {
+	padding: 0;
+	margin: 0;
+
+	li {
+		display: block;
+		white-space: nowrap;
+	}
+}
+
+#park-info-name {
+	font-size: 20px;
+}
+
+.park-images-ul {
+
+	height: 300px;
+	overflow-y: scroll;
+
+	ul {
+		padding: 0;
+		margin: 0;
+
+		li {
+			display: inline-block;
+			width: 25%;
+
+			img {
+				width: 100%;
+			}
+		}
+	}
+}
+
 .svg-check {
 	display    : none;
 	position   : absolute;
