--- a/resources/assets/stylesheets/app.css
+++ b/resources/assets/stylesheets/app.css
@@ -8842,8 +8842,13 @@ body {
   max-width: 100%;
 }
 
+/* line 130, ../sass/app.scss */
+#park-info-name {
+  font-size: 20px;
+}
+
 /* GENERAL CLASSES */
-/* line 136, ../sass/app.scss */
+/* line 140, ../sass/app.scss */
 .title {
   letter-spacing: 10px;
   -webkit-transition: all 0.1s ease-in-out;
@@ -8853,7 +8858,7 @@ body {
   transition: all 0.1s ease-in-out;
 }
 
-/* line 141, ../sass/app.scss */
+/* line 145, ../sass/app.scss */
 .sub-title {
   letter-spacing: 3px;
   -webkit-transition: all 0.1s ease-in-out;
@@ -8863,7 +8868,7 @@ body {
   transition: all 0.1s ease-in-out;
 }
 
-/* line 146, ../sass/app.scss */
+/* line 150, ../sass/app.scss */
 .description {
   font-size: 16px;
   padding: 0 10px;
@@ -8874,7 +8879,7 @@ body {
   transition: all 0.1s ease-in-out;
 }
 
-/* line 152, ../sass/app.scss */
+/* line 156, ../sass/app.scss */
 .reset-btn {
   position: fixed;
   bottom: 2%;
@@ -8893,22 +8898,22 @@ body {
   cursor: pointer;
   font-weight: bold;
 }
-/* line 170, ../sass/app.scss */
+/* line 174, ../sass/app.scss */
 .reset-btn:active {
   opacity: .8;
 }
-/* line 174, ../sass/app.scss */
+/* line 178, ../sass/app.scss */
 .reset-btn i {
   line-height: 28px;
 }
 
-/* line 189, ../sass/app.scss */
+/* line 183, ../sass/app.scss */
 .gmap {
   width: 100%;
   height: 40%;
 }
 
-/* line 194, ../sass/app.scss */
+/* line 188, ../sass/app.scss */
 .fire-btn {
   position: fixed;
   bottom: 2%;
@@ -8927,12 +8932,12 @@ body {
   cursor: pointer;
   font-weight: bold;
 }
-/* line 212, ../sass/app.scss */
+/* line 206, ../sass/app.scss */
 .fire-btn:active {
   opacity: .8;
 }
 
-/* line 223, ../sass/app.scss */
+/* line 211, ../sass/app.scss */
 .fire-btn-shadow {
   position: fixed;
   bottom: 2%;
@@ -8948,7 +8953,7 @@ body {
   box-shadow: 0px 8px 36px -9px black;
 }
 
-/* line 244, ../sass/app.scss */
+/* line 226, ../sass/app.scss */
 .reset-btn-shadow {
   position: fixed;
   bottom: 2%;
@@ -8965,31 +8970,31 @@ body {
   box-shadow: 0px 8px 36px -9px black;
 }
 
-/* line 266, ../sass/app.scss */
+/* line 242, ../sass/app.scss */
 .center {
   margin: 0 auto;
 }
 
-/* line 270, ../sass/app.scss */
+/* line 246, ../sass/app.scss */
 .text-center {
   text-align: center;
 }
 
-/* line 275, ../sass/app.scss */
+/* line 251, ../sass/app.scss */
 .park-nav ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 @media (min-width: 768px) {
-  /* line 275, ../sass/app.scss */
+  /* line 251, ../sass/app.scss */
   .park-nav ul {
     width: 640px;
     margin: 0 auto;
     text-align: center;
   }
 }
-/* line 287, ../sass/app.scss */
+/* line 263, ../sass/app.scss */
 .park-nav ul li {
   position: relative;
   height: 150px;
@@ -8997,7 +9002,7 @@ body {
   margin: 5px 0 5px 0;
 }
 @media (min-width: 768px) {
-  /* line 287, ../sass/app.scss */
+  /* line 263, ../sass/app.scss */
   .park-nav ul li {
     width: 318px;
     /*account for padding*/
@@ -9006,7 +9011,7 @@ body {
     display: inline-block;
   }
 }
-/* line 301, ../sass/app.scss */
+/* line 277, ../sass/app.scss */
 .park-nav ul li p {
   position: absolute;
   bottom: 0;
@@ -9032,7 +9037,7 @@ body {
   -o-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
 }
-/* line 323, ../sass/app.scss */
+/* line 299, ../sass/app.scss */
 .park-nav ul li:hover p {
   -webkit-transform: translate(-5px, 0px);
   -moz-transform: translate(-5px, 0px);
@@ -9041,7 +9046,7 @@ body {
   transform: translate(-5px, 0px);
 }
 
-/* line 331, ../sass/app.scss */
+/* line 307, ../sass/app.scss */
 .li-bg {
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
@@ -9050,20 +9055,20 @@ body {
   transition: all 0.2s ease-in-out;
   opacity: .9;
 }
-/* line 334, ../sass/app.scss */
+/* line 310, ../sass/app.scss */
 .li-bg:hover {
   cursor: pointer;
 }
-/* line 337, ../sass/app.scss */
+/* line 313, ../sass/app.scss */
 .li-bg:hover .li-overlay {
   background-color: #fff;
 }
-/* line 341, ../sass/app.scss */
+/* line 317, ../sass/app.scss */
 .li-bg:active {
   opacity: 1;
 }
 
-/* line 346, ../sass/app.scss */
+/* line 322, ../sass/app.scss */
 .li-overlay {
   position: absolute;
   top: 72.5%;
@@ -9079,7 +9084,7 @@ body {
   transition: all 0.5s ease-in-out;
 }
 
-/* line 357, ../sass/app.scss */
+/* line 333, ../sass/app.scss */
 .li-overlay-white {
   position: absolute;
   top: 69%;
@@ -9089,14 +9094,13 @@ body {
   background-color: #fff;
 }
 
-/* line 366, ../sass/app.scss */
+/* line 342, ../sass/app.scss */
 .park-distance-ul {
   overflow: hidden;
   width: 100%;
   height: 76px;
 }
-
-/* line 372, ../sass/app.scss */
+/* line 347, ../sass/app.scss */
 .park-distance-ul ul {
   margin: 0;
   padding: 0;
@@ -9104,8 +9108,7 @@ body {
   white-space: nowrap;
   padding-bottom: 17px;
 }
-
-/* line 380, ../sass/app.scss */
+/* line 354, ../sass/app.scss */
 .park-distance-ul ul li {
   list-style: none;
   position: relative;
@@ -9124,8 +9127,7 @@ body {
   -o-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
 }
-
-/* line 395, ../sass/app.scss */
+/* line 368, ../sass/app.scss */
 .park-distance-ul ul li:hover {
   opacity: .7;
   -webkit-transition: all 0.1s ease-in-out;
@@ -9134,13 +9136,7 @@ body {
   -o-transition: all 0.1s ease-in-out;
   transition: all 0.1s ease-in-out;
 }
-
-/* line 400, ../sass/app.scss */
-.park-selected {
-  opacity: .5;
-}
-
-/* line 404, ../sass/app.scss */
+/* line 373, ../sass/app.scss */
 .park-distance-ul ul li .number {
   font-size: 20px;
   display: inline-block;
@@ -9151,7 +9147,12 @@ body {
   color: #524231;
 }
 
-/* line 414, ../sass/app.scss */
+/* line 386, ../sass/app.scss */
+.park-selected {
+  opacity: .5;
+}
+
+/* line 390, ../sass/app.scss */
 .number-overlay {
   font-size: 62px;
   display: inline-block;
@@ -9170,43 +9171,42 @@ body {
   transform: scale(0.5, 0.5);
 }
 
-/* line 428, ../sass/app.scss */
+/* line 404, ../sass/app.scss */
 .park-info-cont {
   padding: 0;
   margin: 0;
 }
-/* line 432, ../sass/app.scss */
+/* line 408, ../sass/app.scss */
 .park-info-cont li {
   display: block;
   white-space: nowrap;
 }
 
-/* line 438, ../sass/app.scss */
-#park-info-name {
-  font-size: 20px;
-}
-
-/* line 442, ../sass/app.scss */
+/* line 414, ../sass/app.scss */
 .park-images-ul {
-  height: 300px;
-  overflow-y: scroll;
+  overflow: hidden;
+  width: 100%;
+  height: 125px;
 }
-/* line 447, ../sass/app.scss */
+/* line 419, ../sass/app.scss */
 .park-images-ul ul {
-  padding: 0;
   margin: 0;
+  padding: 0;
+  overflow-x: scroll;
+  white-space: nowrap;
+  padding-bottom: 17px;
 }
-/* line 451, ../sass/app.scss */
+/* line 426, ../sass/app.scss */
 .park-images-ul ul li {
   display: inline-block;
-  width: 25%;
+  padding-right: 5px;
 }
-/* line 455, ../sass/app.scss */
+/* line 430, ../sass/app.scss */
 .park-images-ul ul li img {
-  width: 100%;
+  height: 125px;
 }
 
-/* line 462, ../sass/app.scss */
+/* line 437, ../sass/app.scss */
 .svg-check {
   display: none;
   position: absolute;
@@ -9218,7 +9218,7 @@ body {
   height: 40px;
 }
 
-/* line 473, ../sass/app.scss */
+/* line 448, ../sass/app.scss */
 footer {
   color: #aec1ae;
   font-size: 10px;
@@ -9226,18 +9226,18 @@ footer {
 }
 
 @media all and (min-width: 768px) {
-  /* line 480, ../sass/app.scss */
+  /* line 455, ../sass/app.scss */
   .park-distance-ul {
     height: auto;
   }
 
-  /* line 484, ../sass/app.scss */
+  /* line 459, ../sass/app.scss */
   .park-distance-ul ul {
     padding-bottom: 0;
   }
 }
 /* TRANSITION SPECIFIC */
-/* line 495, ../sass/app.scss */
+/* line 470, ../sass/app.scss */
 .ani-left {
   -webkit-transform: translate3d(-2000px, 0, 0);
   -moz-transform: translate3d(-2000px, 0, 0);
@@ -9247,7 +9247,7 @@ footer {
   opacity: 0;
 }
 
-/* line 500, ../sass/app.scss */
+/* line 475, ../sass/app.scss */
 .ani-right {
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
@@ -9257,18 +9257,18 @@ footer {
   opacity: 1;
 }
 
-/* line 505, ../sass/app.scss */
+/* line 480, ../sass/app.scss */
 .ani-fadeOut {
   opacity: 0;
 }
 
-/* line 509, ../sass/app.scss */
+/* line 484, ../sass/app.scss */
 .ani-fadeIn {
   opacity: 1;
 }
 
 /* ANIMATION SPECIFIC */
-/* line 519, ../sass/app.scss */
+/* line 494, ../sass/app.scss */
 .zoom-check {
   -webkit-animation: zoomAni 0.5s forwards;
   -moz-animation: zoomAni 0.5s forwards;
@@ -9277,7 +9277,7 @@ footer {
   animation: zoomAni 0.5s forwards;
 }
 
-/* line 523, ../sass/app.scss */
+/* line 498, ../sass/app.scss */
 .zoom-check-reverse {
   -webkit-animation: zoomAniRev 0.5s forwards;
   -moz-animation: zoomAniRev 0.5s forwards;
@@ -9286,7 +9286,7 @@ footer {
   animation: zoomAniRev 0.5s forwards;
 }
 
-/* line 527, ../sass/app.scss */
+/* line 502, ../sass/app.scss */
 .zoom-check-shadow {
   -webkit-animation: zoomAniRevShadow 0.5s forwards;
   -moz-animation: zoomAniRevShadow 0.5s forwards;
@@ -9295,7 +9295,7 @@ footer {
   animation: zoomAniRevShadow 0.5s forwards;
 }
 
-/* line 531, ../sass/app.scss */
+/* line 506, ../sass/app.scss */
 .zoom-check-shadow-reverse {
   -webkit-animation: zoomAniRevShadowRev 0.5s forwards;
   -moz-animation: zoomAniRevShadowRev 0.5s forwards;
@@ -9304,7 +9304,7 @@ footer {
   animation: zoomAniRevShadowRev 0.5s forwards;
 }
 
-/* line 535, ../sass/app.scss */
+/* line 510, ../sass/app.scss */
 .slide-center {
   -webkit-animation: slideAni 0.5s forwards;
   -moz-animation: slideAni 0.5s forwards;
@@ -9313,7 +9313,7 @@ footer {
   animation: slideAni 0.5s forwards;
 }
 
-/* line 539, ../sass/app.scss */
+/* line 514, ../sass/app.scss */
 .number-zoom {
   -webkit-animation: numberZoomAni 1.5s forwards;
   -moz-animation: numberZoomAni 1.5s forwards;
