--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -339,12 +339,17 @@ body {
 	background-color: #fff;
 }
 
+.park-list-container {
+	position: relative;
+	width: 100%;
+}
+
 .park-distance-ul {
 	overflow: hidden;
 	width: 100%;
 	height: 76px;
 
-	@media all and (min-width: 768px) {
+	@media all and (min-width: $screen-sm) {
 		height: auto;
 	}
 
@@ -355,7 +360,7 @@ body {
 		white-space: nowrap;
 		padding-bottom: 17px;
 
-		@media all and (min-width: 768px) {
+		@media all and (min-width: $screen-sm) {
 			padding-bottom: 0;
 		}
 
@@ -428,7 +433,7 @@ body {
 	width: 100%;
 	height: 125px;
 
-	@media all and (min-width: 768px) {
+	@media all and (min-width: $screen-sm) {
 		height: auto;
 	}
 
@@ -439,7 +444,7 @@ body {
 		white-space: nowrap;
 		padding-bottom: 17px;
 
-		@media all and (min-width: 768px) {
+		@media all and (min-width: $screen-sm) {
 			padding-bottom: 0;
 		}
 
@@ -463,6 +468,24 @@ body {
 	margin-top : -20px;
 	width      : 40px;
 	height     : 40px;
+}
+
+.chosen-park-list {
+	width: 100px;
+    height: 150px;
+    position: absolute;
+    top: 50px;
+    left: 0;
+    background-color: blue;
+    opacity: .8;
+
+    @media ( min-width: $screen-sm ) {
+    	position: fixed;
+    	top: auto;
+    	left: auto;
+    	right: 0;
+    	bottom: 80px;
+    }
 }
 
 footer {
