--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -471,12 +471,12 @@ body {
 }
 
 .chosen-park-list {
-	width: 100px;
-    height: 150px;
+	// width: 100px;
+ //    height: 150px;
     position: absolute;
     top: 50px;
     left: 0;
-    background-color: blue;
+    background-color: white;
     opacity: .8;
 
     @media ( min-width: $screen-sm ) {
@@ -485,6 +485,16 @@ body {
     	left: auto;
     	right: 0;
     	bottom: 80px;
+    }
+
+    ul {
+    	padding: 0;
+    	margin: 0;
+
+    	li {
+    		text-align: right;
+    		list-style: none;
+    	}
     }
 }
 
@@ -546,14 +556,63 @@ footer {
 
 .number-zoom {
 	@include animationFunc( numberZoomAni, 1.5s, forwards );
+	-webkit-animation-timing-function: linear;
+	-moz-animation-timing-function: linear;
+	-o-animation-timing-function: linear;
 	animation-timing-function: linear;
+}
+
+.fade-in-and-up {
+	@include animationFunc( fadeInAndUp, 1s, forwards );
 }
 
 
 
 /* KEY FRAMES */
 
+@-webkit-keyframes fadeInAndUp {
+   0% {
+   		opacity: 0;
+		-webkit-transform: translate(0, 20px);
+    }
+    100% {
+    	opacity: 1;
+		-webkit-transform: translate(0, 0);
+    }
+}
 
+@keyframes fadeInAndUp {
+   0% {
+   		opacity: 0;
+		transform: translate(0, 20px);
+    }
+    100% {
+    	opacity: 1;
+		transform: translate(0, 0);
+    }
+}
+
+@-moz-keyframes fadeInAndUp {
+   0% {
+   		opacity: 0;
+		-moz-transform: translate(0, 20px);
+    }
+    100% {
+    	opacity: 1;
+		-moz-transform: translate(0, 0);
+    }
+}
+
+@-o-keyframes fadeInAndUp {
+   0% {
+   		opacity: 0;
+		-o-transform: translate(0, 20px);
+    }
+    100% {
+    	opacity: 1;
+		-o-transform: translate(0, 0);
+    }
+}
 
 @-webkit-keyframes zoomAni {
     0% {
