new db structuring

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -176,7 +176,11 @@ body {
 	}
 
 	i {
-		line-height: 28px;
+		margin: 0;
+	    padding: 0;
+	    position: relative;
+	    top: 50%;
+	    transform: translateY(-68%);
 	}
 }
 
@@ -471,29 +475,24 @@ body {
 }
 
 .chosen-park-list {
-	// width: 100px;
- //    height: 150px;
-    position: absolute;
-    top: 50px;
-    left: 0;
+	position: fixed;
+	top: auto;
+	left: auto;
+	right: 2%;
+	bottom: 80px;
     background-color: white;
     opacity: .8;
-
-    @media ( min-width: $screen-sm ) {
-    	position: fixed;
-    	top: auto;
-    	left: auto;
-    	right: 0;
-    	bottom: 80px;
-    }
 
     ul {
     	padding: 0;
     	margin: 0;
+	    padding: 10px 0 10px 10px;
 
     	li {
     		text-align: right;
     		list-style: none;
+    		color: $btn-text;
+    		font-size: 13px;
     	}
     }
 }
