--- a/resources/assets/stylesheets/app.css
+++ b/resources/assets/stylesheets/app.css
@@ -8904,16 +8904,20 @@ body {
 }
 /* line 178, ../sass/app.scss */
 .reset-btn i {
-  line-height: 28px;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  top: 50%;
+  transform: translateY(-68%);
 }
 
-/* line 183, ../sass/app.scss */
+/* line 187, ../sass/app.scss */
 .gmap {
   width: 100%;
   height: 40%;
 }
 
-/* line 188, ../sass/app.scss */
+/* line 192, ../sass/app.scss */
 .fire-btn {
   position: fixed;
   bottom: 2%;
@@ -8932,12 +8936,12 @@ body {
   cursor: pointer;
   font-weight: bold;
 }
-/* line 206, ../sass/app.scss */
+/* line 210, ../sass/app.scss */
 .fire-btn:active {
   opacity: .8;
 }
 
-/* line 211, ../sass/app.scss */
+/* line 215, ../sass/app.scss */
 .fire-btn-shadow {
   position: fixed;
   bottom: 2%;
@@ -8953,7 +8957,7 @@ body {
   box-shadow: 0px 8px 36px -9px black;
 }
 
-/* line 226, ../sass/app.scss */
+/* line 230, ../sass/app.scss */
 .reset-btn-shadow {
   position: fixed;
   bottom: 2%;
@@ -8970,31 +8974,31 @@ body {
   box-shadow: 0px 8px 36px -9px black;
 }
 
-/* line 242, ../sass/app.scss */
+/* line 246, ../sass/app.scss */
 .center {
   margin: 0 auto;
 }
 
-/* line 246, ../sass/app.scss */
+/* line 250, ../sass/app.scss */
 .text-center {
   text-align: center;
 }
 
-/* line 251, ../sass/app.scss */
+/* line 255, ../sass/app.scss */
 .park-nav ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 @media (min-width: 768px) {
-  /* line 251, ../sass/app.scss */
+  /* line 255, ../sass/app.scss */
   .park-nav ul {
     width: 640px;
     margin: 0 auto;
     text-align: center;
   }
 }
-/* line 263, ../sass/app.scss */
+/* line 267, ../sass/app.scss */
 .park-nav ul li {
   position: relative;
   height: 150px;
@@ -9002,7 +9006,7 @@ body {
   margin: 5px 0 5px 0;
 }
 @media (min-width: 768px) {
-  /* line 263, ../sass/app.scss */
+  /* line 267, ../sass/app.scss */
   .park-nav ul li {
     width: 318px;
     /*account for padding*/
@@ -9011,7 +9015,7 @@ body {
     display: inline-block;
   }
 }
-/* line 277, ../sass/app.scss */
+/* line 281, ../sass/app.scss */
 .park-nav ul li p {
   position: absolute;
   bottom: 0;
@@ -9037,7 +9041,7 @@ body {
   -o-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
 }
-/* line 299, ../sass/app.scss */
+/* line 303, ../sass/app.scss */
 .park-nav ul li:hover p {
   -webkit-transform: translate(-5px, 0px);
   -moz-transform: translate(-5px, 0px);
@@ -9046,7 +9050,7 @@ body {
   transform: translate(-5px, 0px);
 }
 
-/* line 307, ../sass/app.scss */
+/* line 311, ../sass/app.scss */
 .li-bg {
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
@@ -9055,20 +9059,20 @@ body {
   transition: all 0.2s ease-in-out;
   opacity: .9;
 }
-/* line 310, ../sass/app.scss */
+/* line 314, ../sass/app.scss */
 .li-bg:hover {
   cursor: pointer;
 }
-/* line 313, ../sass/app.scss */
+/* line 317, ../sass/app.scss */
 .li-bg:hover .li-overlay {
   background-color: #fff;
 }
-/* line 317, ../sass/app.scss */
+/* line 321, ../sass/app.scss */
 .li-bg:active {
   opacity: 1;
 }
 
-/* line 322, ../sass/app.scss */
+/* line 326, ../sass/app.scss */
 .li-overlay {
   position: absolute;
   top: 72.5%;
@@ -9084,7 +9088,7 @@ body {
   transition: all 0.5s ease-in-out;
 }
 
-/* line 333, ../sass/app.scss */
+/* line 337, ../sass/app.scss */
 .li-overlay-white {
   position: absolute;
   top: 69%;
@@ -9094,25 +9098,25 @@ body {
   background-color: #fff;
 }
 
-/* line 342, ../sass/app.scss */
+/* line 346, ../sass/app.scss */
 .park-list-container {
   position: relative;
   width: 100%;
 }
 
-/* line 347, ../sass/app.scss */
+/* line 351, ../sass/app.scss */
 .park-distance-ul {
   overflow: hidden;
   width: 100%;
   height: 76px;
 }
 @media all and (min-width: 768px) {
-  /* line 347, ../sass/app.scss */
+  /* line 351, ../sass/app.scss */
   .park-distance-ul {
     height: auto;
   }
 }
-/* line 356, ../sass/app.scss */
+/* line 360, ../sass/app.scss */
 .park-distance-ul ul {
   margin: 0;
   padding: 0;
@@ -9121,12 +9125,12 @@ body {
   padding-bottom: 17px;
 }
 @media all and (min-width: 768px) {
-  /* line 356, ../sass/app.scss */
+  /* line 360, ../sass/app.scss */
   .park-distance-ul ul {
     padding-bottom: 0;
   }
 }
-/* line 367, ../sass/app.scss */
+/* line 371, ../sass/app.scss */
 .park-distance-ul ul li {
   list-style: none;
   position: relative;
@@ -9145,7 +9149,7 @@ body {
   -o-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
 }
-/* line 381, ../sass/app.scss */
+/* line 385, ../sass/app.scss */
 .park-distance-ul ul li:hover {
   opacity: .7;
   -webkit-transition: all 0.1s ease-in-out;
@@ -9154,7 +9158,7 @@ body {
   -o-transition: all 0.1s ease-in-out;
   transition: all 0.1s ease-in-out;
 }
-/* line 386, ../sass/app.scss */
+/* line 390, ../sass/app.scss */
 .park-distance-ul ul li .number {
   font-size: 20px;
   display: inline-block;
@@ -9165,17 +9169,17 @@ body {
   color: #524231;
 }
 
-/* line 399, ../sass/app.scss */
+/* line 403, ../sass/app.scss */
 .park-selected {
   opacity: .5;
 }
 
-/* line 403, ../sass/app.scss */
+/* line 407, ../sass/app.scss */
 .park-selected-official {
   border: 6px solid #524231 !important;
 }
 
-/* line 407, ../sass/app.scss */
+/* line 411, ../sass/app.scss */
 .number-overlay {
   font-size: 62px;
   display: inline-block;
@@ -9194,30 +9198,30 @@ body {
   transform: scale(0.5, 0.5);
 }
 
-/* line 421, ../sass/app.scss */
+/* line 425, ../sass/app.scss */
 .park-info-cont {
   padding: 0;
   margin: 0;
 }
-/* line 425, ../sass/app.scss */
+/* line 429, ../sass/app.scss */
 .park-info-cont li {
   display: block;
   white-space: nowrap;
 }
 
-/* line 431, ../sass/app.scss */
+/* line 435, ../sass/app.scss */
 .park-images-ul {
   overflow: hidden;
   width: 100%;
   height: 125px;
 }
 @media all and (min-width: 768px) {
-  /* line 431, ../sass/app.scss */
+  /* line 435, ../sass/app.scss */
   .park-images-ul {
     height: auto;
   }
 }
-/* line 440, ../sass/app.scss */
+/* line 444, ../sass/app.scss */
 .park-images-ul ul {
   margin: 0;
   padding: 0;
@@ -9226,22 +9230,22 @@ body {
   padding-bottom: 17px;
 }
 @media all and (min-width: 768px) {
-  /* line 440, ../sass/app.scss */
+  /* line 444, ../sass/app.scss */
   .park-images-ul ul {
     padding-bottom: 0;
   }
 }
-/* line 451, ../sass/app.scss */
+/* line 455, ../sass/app.scss */
 .park-images-ul ul li {
   display: inline-block;
   padding-right: 5px;
 }
-/* line 455, ../sass/app.scss */
+/* line 459, ../sass/app.scss */
 .park-images-ul ul li img {
   height: 125px;
 }
 
-/* line 462, ../sass/app.scss */
+/* line 466, ../sass/app.scss */
 .svg-check {
   display: none;
   position: absolute;
@@ -9253,36 +9257,31 @@ body {
   height: 40px;
 }
 
-/* line 473, ../sass/app.scss */
+/* line 477, ../sass/app.scss */
 .chosen-park-list {
-  position: absolute;
-  top: 50px;
-  left: 0;
+  position: fixed;
+  top: auto;
+  left: auto;
+  right: 2%;
+  bottom: 80px;
   background-color: white;
   opacity: .8;
 }
-@media (min-width: 768px) {
-  /* line 473, ../sass/app.scss */
-  .chosen-park-list {
-    position: fixed;
-    top: auto;
-    left: auto;
-    right: 0;
-    bottom: 80px;
-  }
-}
-/* line 490, ../sass/app.scss */
+/* line 486, ../sass/app.scss */
 .chosen-park-list ul {
   padding: 0;
   margin: 0;
+  padding: 10px 0 10px 10px;
 }
-/* line 494, ../sass/app.scss */
+/* line 491, ../sass/app.scss */
 .chosen-park-list ul li {
   text-align: right;
   list-style: none;
+  color: #524231;
+  font-size: 13px;
 }
 
-/* line 501, ../sass/app.scss */
+/* line 500, ../sass/app.scss */
 footer {
   color: #aec1ae;
   font-size: 10px;
@@ -9290,7 +9289,7 @@ footer {
 }
 
 /* TRANSITION SPECIFIC */
-/* line 513, ../sass/app.scss */
+/* line 512, ../sass/app.scss */
 .ani-left {
   -webkit-transform: translate3d(-2000px, 0, 0);
   -moz-transform: translate3d(-2000px, 0, 0);
@@ -9300,7 +9299,7 @@ footer {
   opacity: 0;
 }
 
-/* line 518, ../sass/app.scss */
+/* line 517, ../sass/app.scss */
 .ani-right {
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
@@ -9310,18 +9309,18 @@ footer {
   opacity: 1;
 }
 
-/* line 523, ../sass/app.scss */
+/* line 522, ../sass/app.scss */
 .ani-fadeOut {
   opacity: 0;
 }
 
-/* line 527, ../sass/app.scss */
+/* line 526, ../sass/app.scss */
 .ani-fadeIn {
   opacity: 1;
 }
 
 /* ANIMATION SPECIFIC */
-/* line 537, ../sass/app.scss */
+/* line 536, ../sass/app.scss */
 .zoom-check {
   -webkit-animation: zoomAni 0.5s forwards;
   -moz-animation: zoomAni 0.5s forwards;
@@ -9330,7 +9329,7 @@ footer {
   animation: zoomAni 0.5s forwards;
 }
 
-/* line 541, ../sass/app.scss */
+/* line 540, ../sass/app.scss */
 .zoom-check-reverse {
   -webkit-animation: zoomAniRev 0.5s forwards;
   -moz-animation: zoomAniRev 0.5s forwards;
@@ -9339,7 +9338,7 @@ footer {
   animation: zoomAniRev 0.5s forwards;
 }
 
-/* line 545, ../sass/app.scss */
+/* line 544, ../sass/app.scss */
 .zoom-check-shadow {
   -webkit-animation: zoomAniRevShadow 0.5s forwards;
   -moz-animation: zoomAniRevShadow 0.5s forwards;
@@ -9348,7 +9347,7 @@ footer {
   animation: zoomAniRevShadow 0.5s forwards;
 }
 
-/* line 549, ../sass/app.scss */
+/* line 548, ../sass/app.scss */
 .zoom-check-shadow-reverse {
   -webkit-animation: zoomAniRevShadowRev 0.5s forwards;
   -moz-animation: zoomAniRevShadowRev 0.5s forwards;
@@ -9357,7 +9356,7 @@ footer {
   animation: zoomAniRevShadowRev 0.5s forwards;
 }
 
-/* line 553, ../sass/app.scss */
+/* line 552, ../sass/app.scss */
 .slide-center {
   -webkit-animation: slideAni 0.5s forwards;
   -moz-animation: slideAni 0.5s forwards;
@@ -9366,7 +9365,7 @@ footer {
   animation: slideAni 0.5s forwards;
 }
 
-/* line 557, ../sass/app.scss */
+/* line 556, ../sass/app.scss */
 .number-zoom {
   -webkit-animation: numberZoomAni 1.5s forwards;
   -moz-animation: numberZoomAni 1.5s forwards;
@@ -9379,7 +9378,7 @@ footer {
   animation-timing-function: linear;
 }
 
-/* line 565, ../sass/app.scss */
+/* line 564, ../sass/app.scss */
 .fade-in-and-up {
   -webkit-animation: fadeInAndUp 1s forwards;
   -moz-animation: fadeInAndUp 1s forwards;
